Dropped Java 7 support Converted functional interfaces to lambda